<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/log_in"
                android:textAppearance="?android:textAppearanceLarge"
                android:gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/email"
                android:background="@drawable/edit_design"
                android:padding="15dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:id="@+id/email_login"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edit_design"
                android:padding="15dp"
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                android:textColorHint="@android:color/white"
                android:hint="@string/password"
                android:id="@+id/login_password"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/button_design"
                android:padding="15dp"
                android:textColor="@android:color/white"
                android:text="@string/log_in"
                android:textAppearance="?android:textAppearanceMedium"
                android:id="@+id/btn_login"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:textAppearance="?android:textAppearanceLarge"
                android:gravity="center"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/registration"
                android:background="@drawable/button_design"
                android:padding="15dp"
                android:textColor="@android:color/white"
                android:textAppearance="?android:textAppearanceMedium"
                android:id="@+id/btn_reg"/>
        </LinearLayout>

    </ScrollView>


</LinearLayout>